bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-attr-format.stderr
error: Unsupported struct attribute format
 --> tests/ui/error-unsupported-struct-attr-format.rs:4:1
  |
4 | #[frompyo3( = "Resource")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
